--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,7 @@
   %head
     %meta{ :charset => "utf-8" }
     %meta{ :name => "description", :content => "Resumé for Matthew Willhite" }
+    %meta{ :name => "robots", :content => "noindex" }
 
     %title Matthew Willhite | Resumé
     
