Added objective statement

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -1,6 +1,8 @@
 %h2 Objective
 %p.objective
   %strong To exceed my own expectations.
+
+  First and foremost, I am a problem solver. I am an advocate for simple code and design, even when backed with a complex architecture. I bring a different perspective to the teams I work with. The wide variety of experiences that I have lend themselves well to a small team.
   / This still needs help, not sure how to tie it back to the company
    
 %h2 Skills
