Added references copy

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -101,3 +101,8 @@
     %h3 Portland State University
     %p.desc Graphic Design
     %p.date Fall 2003 &#8211; Spring 2007
+
+    
+%ol
+  %li
+    %h3 References available upon request
