Basic slide show completed

--- a/views/case_study.haml
+++ b/views/case_study.haml
@@ -15,8 +15,22 @@
   %h2 Redesign
   %p 
     I came into this project eight months ago after it had already been started. There were remnants of several designs past. As our product was reaching beta, it still looked very alpha. When the time was right, I took the initiative to redesign the entire application. I developed a library of our key components and created a styleguide for my peers to follow. 
-  %p  
-    %img{ :src => "/images/stella_design_cropped.png", :alt => "Before/After screenshot of the Stella Product", :class => "screencap" }
+  %p.container  
+    %img{ :src => "/images/search_mockup.png", :alt => "Search page redesign mockup", :class => "screencap" }
+    %img{ :src => "/images/search_original.png", :alt => "Search page original design", :class => "screencap" }
+    %img{ :src => "/images/search_current.png", :alt => "Search page initial implementation", :class => "screencap" }
+    %img{ :src => "/images/encounter_mockup.png", :alt => "Encounter page redesign mockup", :class => "screencap" }
+    %img{ :src => "/images/encounter_original.png", :alt => "Encounter page original design", :class => "screencap" }
+    %img{ :src => "/images/encounter_current.png", :alt => "Encounter page initial implementation", :class => "screencap" }
+    %img{ :src => "/images/patient_mockup.png", :alt => "Patient page redesign mockup", :class => "screencap" }
+    %img{ :src => "/images/patient_original.png", :alt => "Patient page original design", :class => "screencap" }
+    %img{ :src => "/images/patient_current.png", :alt => "Patient page initial implementation", :class => "screencap" }
+    %i.image_caption Search page redesign mockup
+    
+  %p
+    %a.previous{ :href => '#' } Previous
+    %a.next{ :href => '#' } Next
+    
 
 %section 
   %h2 HTML Interface
