--- a/views/styles.sass
+++ b/views/styles.sass
@@ -175,3 +175,17 @@ footer
     :font-style italic
     :color $subdued
     :background none
+    
+    
+.container
+  :height 240px
+  :width 600px
+  :position relative
+  
+  img
+    :position absolute
+    
+  .image_caption
+    :position absolute
+    :bottom -25px
+    :right 0
