--- a/views/reset.sass
+++ b/views/reset.sass
@@ -33,3 +33,9 @@ blockquote:before, blockquote:after, q:before, q:after
 
 blockquote, q
   :quotes "" ""
+
+header, footer, nav, section, pre
+  :display block
+  
+code
+  :display inline
